# llm-d-benchmark

./: .gitignore  .pre-commit-config.yaml  .pre-commit_requirements.txt  .secrets.baseline  .version.json  BASH_TO_PYTHON_CONVERSION.md  CONTRIBUTING.md  Dockerfile  Makefile  OWNERS  README.md  e2e.sh  llm-d-dev:0.0.4-amd64.txt  pyproject.toml  pytest.ini  run.sh  setup_precommit.sh
.tekton/: pipelinerun.yaml
analysis/: README.md  analysis.ipynb  analysis_inference_scheduler.ipynb  analysis_pd.ipynb  analyze_results.py  convert.py  explorer.py  fmperf-analyze_results.py  guidellm-analyze_results.sh  inference-perf-analyze_results.sh  nop-analyze_results.py  plotting.py  schema.py  sweep_configuration_analysis.ipynb  vllm-benchmark-analyze_results.sh
config_explorer/: Capacity_Planner.py  Home.py  README.md  db.json  db.py  df.pkl  pyproject.toml  pytest.ini  requirements-streamlit.txt  requirements.txt  util.py
config_explorer/pages/: 1_Configuration_Sweep_Explorer.py  1_Sweep.py  2_BLIS_Simulator.py  2_Configuration_Sweep_Explorer_Future.py  2_Sweep_Visualizer.py  3_Blis.py  3_Visualization.py
config_explorer/src/config_explorer/: capacity_planner.py  convert.py  explorer.py  plotting.py  schema.py
config_explorer/tests/: capacity_planner_test.py
docs/: architecture.drawio  benchmark_report.md  doe.md  existing_stack.md  faq.md  flexibility.md  lifecycle.md  observability.md  quickstart.md  reproducibility.md  resource_requirements.md  run.md  standup.md
experiments/: disaggregated_vs_llmd.yaml  epp.yaml  inference-scheduling.yaml  pd-disaggregation.yaml  precise-prefix-cache-aware.yaml  precise_prefix_cache_aware.yaml
quickstart-existing-stack-benchmark/: Compare-README.md  Dockerfile  README.md  analysis-job.yaml  benchmark-job.yaml  quickstart-config.md  retrieve.yaml  run_example.md
scenarios/: aiu.sh  (+40 more)
(+441 files in other folders)
