[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "config_explorer"
version = "0.3.0"
description = "Finding the most optimal configuration of llm-d."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "huggingface_hub==0.34.4",
    "matplotlib==3.10.5",
    "numpy==2.3.2",
    "pandas==2.3.1",
    "pydantic==2.11.7",
    "PyYAML==6.0.2",
    "scipy==1.16.1",
    "transformers==4.55.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
